result text-overflow fix

--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ input[type=result] {
     font-family: Myriad-R;
     cursor: default;
     padding: 0px 0px 0px 10px;
+    text-overflow: clip;
 }
 
 input[type=table-start] {
